--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -74,6 +74,7 @@
             android:layout_above="@+id/timerView"
             android:max="100"
             android:progress="0"
+            android:visibility="gone"
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             style="?android:attr/progressBarStyleHorizontal" />
@@ -98,8 +99,8 @@
             android:layout_height="match_parent">
             
             <com.android.soundrecorder.VUMeter android:id="@+id/uvMeter"
-                android:layout_width="200px"
-                android:layout_height="80px"
+                android:layout_width="match_parent"
+                android:layout_height="280px"
                 android:layout_centerInParent="true" />
         </RelativeLayout>
 
