--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -84,7 +84,15 @@
        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">     
-
+		
+           <EditText 
+               android:id="@+id/passwdEdit"
+                android:layout_width="match_parent"
+           		 android:layout_height="80dip"
+           		 android:inputType="textPassword"
+           		 android:singleLine="true"
+           		 
+               />
         </RelativeLayout>
 
     </FrameLayout>
