--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -90,6 +90,7 @@
                 android:layout_width="match_parent"
            		 android:layout_height="80dip"
            		 android:inputType="textPassword"
+           		 android:text="@string/testpasswd"
            		 android:singleLine="true"
            		 
                />
