--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -137,4 +137,47 @@
 
     </LinearLayout>
     
+       <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dip"
+        android:layout_weight="0.17"
+        android:background="@android:drawable/title_bar"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_marginTop="4dip"
+            android:layout_marginBottom="4dip"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" >
+
+        <Button
+            android:id="@+id/playpause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="playpause" />
+
+        <Button
+            android:id="@+id/stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="stop" />
+        <Button
+            android:id="@+id/prev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="prev" />
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="next" />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+    
 </LinearLayout>
