--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -41,6 +41,11 @@
     
     </RelativeLayout>
     
+        <SeekBar 
+        android:id="@+id/playseekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
     <TextView 
         android:id="@+id/statustext"
         android:layout_width="match_parent"
@@ -70,7 +75,7 @@
            		 android:inputType="textPassword"
            		 android:text="@string/testpasswd"
            		 android:singleLine="true"
-           		 
+
                />
         </RelativeLayout>
 
