将播放/暂停键复用,复用规则见.md文件.

--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -87,32 +87,7 @@
          android:layout_height="wrap_content"
          android:scaleType="fitXY"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dip"
-        android:layout_weight="0.17"
-        android:background="@android:drawable/title_bar"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
 
-        <LinearLayout
-            android:layout_marginTop="4dip"
-            android:layout_marginBottom="4dip"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
-
-            <ImageButton android:id="@+id/recordButton"
-                android:layout_height="match_parent" 
-                style="@style/MediaButton"
-                android:src="@drawable/record" />
-              <ImageButton android:id="@+id/pauseButton"
-                android:layout_height="match_parent" 
-                style="@style/MediaButton"
-                android:src="@drawable/pause" />
-        </LinearLayout>
-
-    </LinearLayout>
     
        <LinearLayout
         android:layout_width="match_parent"
@@ -128,12 +103,18 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" >
-
+		
+                 <Button
+                android:id="@+id/recordButton"
+                 android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="rec" 
+           />
         <Button
             android:id="@+id/playpause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="playpause" />
+            android:text="pl/pau" />
 
         <Button
             android:id="@+id/stop"
@@ -144,7 +125,7 @@
             android:id="@+id/prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prev" />
+            android:text="pre" />
         <Button
             android:id="@+id/next"
             android:layout_width="wrap_content"
