--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -32,7 +32,9 @@
                 android:id="@+id/stateLED"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical" />
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/recording_led"
+                 />
         </LinearLayout>
     </RelativeLayout>
 
