--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -1,95 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    
-    <ImageView
-         android:src="@android:drawable/divider_horizontal_dark"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:scaleType="fitXY"/>
-    
-    <RelativeLayout android:id="@+id/timerViewLayout"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:id="@+id/timerViewLayout"
         android:layout_width="match_parent"
         android:layout_height="242dip"
-        android:background="@drawable/gradient_bg">
+        android:background="@drawable/gradient_bg" >
 
-        <TextView android:id="@+id/timerView"
+        <TextView
+            android:id="@+id/timerView"
+            style="@android:style/TextAppearance.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="70dip"
             android:layout_centerInParent="true"
             android:text="@string/initTime"
-            style="@android:style/TextAppearance.Large" />
+            android:textSize="70dip" />
 
-        <LinearLayout android:id="@+id/stateMessage2Layout"
-            android:orientation="horizontal"
+        <LinearLayout
+            android:id="@+id/stateMessage2Layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/timerView"
             android:layout_centerHorizontal="true"
-            android:baselineAligned="false">
-            
-            <ImageView android:id="@+id/stateLED"
+            android:baselineAligned="false"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/stateLED"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical" />
-                
         </LinearLayout>
-    
     </RelativeLayout>
-    
-        <SeekBar 
+
+    <SeekBar
         android:id="@+id/playseekbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <TextView 
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/statustext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/statustext"
-        />
-    
+        android:text="@string/statustext" />
+
     <ImageView
-         android:src="@android:drawable/divider_horizontal_dark"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:scaleType="fitXY"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:src="@android:drawable/divider_horizontal_dark" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1" >
 
-       <RelativeLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">     
-		
-           <EditText 
-               android:id="@+id/passwdEdit"
+            android:layout_height="match_parent" >
+
+            <EditText
+                android:id="@+id/passwdEdit"
                 android:layout_width="match_parent"
-           		 android:layout_height="80dip"
-           		 android:inputType="textPassword"
-           		 android:text="@string/testpasswd"
-           		 android:singleLine="true"
-
-               />
+                android:layout_height="80dip"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:text="@string/testpasswd" />
         </RelativeLayout>
-
     </FrameLayout>
-    
-    <ImageView
-         android:src="@android:drawable/divider_horizontal_dark"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:scaleType="fitXY"/>
 
-
-    
-       <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dip"
         android:layout_weight="0.17"
@@ -98,41 +81,42 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:layout_marginTop="4dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginBottom="4dip"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
-		
-                 <Button
+            android:layout_marginTop="4dip"
+            android:orientation="horizontal" >
+
+            <Button
                 android:id="@+id/recordButton"
-                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="rec" 
-           />
-        <Button
-            android:id="@+id/playpause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="pl/pau" />
+                android:layout_height="wrap_content"
+                android:text="rec" />
 
-        <Button
-            android:id="@+id/stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="stop" />
-        <Button
-            android:id="@+id/prev"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="pre" />
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="next" />
+            <Button
+                android:id="@+id/playpause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="pl/pau" />
 
+            <Button
+                android:id="@+id/stop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="stop" />
+
+            <Button
+                android:id="@+id/prev"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="pre" />
+
+            <Button
+                android:id="@+id/next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="next" />
         </LinearLayout>
     </LinearLayout>
-    
+
 </LinearLayout>
