先不要密码.

--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -58,7 +58,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" >
+        android:layout_weight="1" 
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="match_parent"
