--- a/Android-java/SoundRecorder/res/layout/main.xml
+++ b/Android-java/SoundRecorder/res/layout/main.xml
@@ -88,6 +88,7 @@
         android:background="@drawable/gradient_bg"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:visibility="gone"
          >
 
         <LinearLayout
